# neuron-agentic-development

./: .gitignore  Config  GETTING_STARTED_GUIDE.md  README.md  _build_backend.py  build  pyproject.toml  setup.cfg  setup.py
.github/workflows/: benchmark-external.yml  benchmark.yml
agents/: neuron-dev-contribution-validation-agent.agent-spec.json  neuron-dev-contribution-validation-agent.md  neuron-framework-autoport-agent.agent-spec.json  neuron-framework-autoport-agent.md  neuron-nki-agent.agent-spec.json  neuron-nki-agent.md  neuron-nki-debugger-agent.agent-spec.json  neuron-nki-debugger-agent.md  neuron-nki-profile-analysis-agent.agent-spec.json  neuron-nki-profile-analysis-agent.md  neuron-nki-writer-agent.agent-spec.json  neuron-nki-writer-agent.md
benchmark/: README.md  action.yml  run_skill_tests.py
benchmark/scaffold/shell/: docker.sh
benchmark/shell/: common.sh  docker.sh
skills/neuron-dev-contribution-validation/: NEURON_METADATA.md  SKILL.md
skills/neuron-dev-contribution-validation/references/: contribution-model.md
skills/neuron-framework-autoport/: SKILL.md
skills/neuron-framework-autoport/assets/: example_gptoss_usage.py  example_phi3_usage.py  example_phimoe_usage.py  example_validation_config.json  test_gptoss_inference.py  test_phi3_inference.py  test_phimoe_inference.py
skills/neuron-framework-autoport/references/: setup_flow.md
skills/neuron-framework-autoport/scripts/: model_compiler.py  run_inference.py  setup_autoport.sh  setup_dry_run.sh  validate_model.py
skills/neuron-framework-equivalence/: SKILL.md  STAGE0.md  STAGE2.md  STAGE4.md  STAGE5.md  STAGE6.md  STAGE7.md
skills/neuron-framework-equivalence/references/: cpu-e2e-debugging.md  device-component-debugging.md  device-e2e-debugging.md  equiv-concept.md  mapping_example.json
skills/neuron-framework-equivalence/scripts/: get_model_tree.py  run_calibration.py  run_stage2.py  run_stage3.py  run_stage5.py  tensor_compare.py
skills/neuron-framework-equivalence/templates/: conftest_template.py  equiv_config_template.json  fast_tp_equiv_test_template.py  run_inference_cpu_template.py
skills/neuron-nki-docs/: SKILL.md
skills/neuron-nki-profiling/: SKILL.md
skills/neuron-nki-profiling/examples/: basic-profiling-workflow.py
skills/neuron-nki-writing/: SKILL.md
src/neuron_agentic_development/: deploy.py
src/neuron_agentic_development.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
test/: test_deploy.py  test_setup_functions.py
tests/: registry.json
tests/neuron-dev-contribution-validation-agent/: contribution-validation.json
tests/neuron-framework-autoport-agent/: nxdi-autoport-dry-run.json
tests/neuron-nki-agent/: beta2-enforcement.json  beta3-enforcement.json  nki040-enforcement.json
(+253 files in other folders)
