# NeuronAgenticDevelopment package configuration
# Build system: brazilpython (Config), with AIM as build-tool

[metadata]
name = neuron-agentic-development
version = 1.0

[options]
packages = find:
include_package_data = True
# BrazilPython test runner — requires BrazilPython-Pytest in test-dependencies
test_command = brazilpython_pytest

[options.packages.find]
# src/ layout: Python package lives under src/
where = src
include = neuron_agentic_development*

[options.package_data]
# Bundle AIM artifacts (ephemeral, copied by setup.py at build time)
neuron_agentic_development = artifacts/**/*

[options.entry_points]
# Deploy commands — transform AIM agent specs to kiro-cli format and copy artifacts
console_scripts =
    deploy-neuron-agentic-development-to-kiro = neuron_agentic_development.deploy:deploy_to_kiro
    deploy-neuron-agentic-development-to-claude = neuron_agentic_development.deploy:deploy_to_claude

[aliases]
# Required for BrazilPython test integration
test = brazil_test

[tool:pytest]
testpaths = test
# src/ layout requires explicit pythonpath for pytest to find the package
pythonpath = src
